# simulation_engineeringclub

./: README.md
asket_ec_sim_ws/src/asket_ec_control/asket_ec_control/: differential_drive_node.py
asket_ec_sim_ws/src/asket_ec_description/urdf/: asket_ec.sdf  asket_ec.urdf
asket_ec_sim_ws/src/asket_ec_gazebo/config/: beatnaut.rviz
asket_ec_sim_ws/src/asket_ec_gazebo/launch/: beatnaut_full.launch.py  rviz.launch.py  simulation.launch.py
asket_ec_sim_ws/src/asket_ec_gazebo/worlds/: asket_ec_world.sdf
asket_ec_sim_ws/src/asket_ec_sim2d/: package.xml  setup.cfg
asket_ec_sim_ws/src/asket_ec_sim2d/asket_ec_sim2d/: buoy_simulator_node.py  keyboard_teleop_node.py  lidar_simulator_node.py  sim_bridge_node.py  simulator_node.py  waypoint_navigator_node.py
asket_ec_sim_ws/src/asket_ec_sim2d/config/: sim2d.rviz  waypoints.yaml
asket_ec_sim_ws/src/asket_ec_sim2d/launch/: njord_sim.launch.py  sim2d.launch.py
beatnaut_sim_ws/: build.sh
beatnaut_sim_ws/src/beatnaut_control/: package.xml  setup.cfg  setup.py
beatnaut_sim_ws/src/beatnaut_control/beatnaut_control/: __init__.py  differential_drive_node.py
beatnaut_sim_ws/src/beatnaut_control/launch/: control.launch.py
beatnaut_sim_ws/src/beatnaut_description/: CMakeLists.txt  package.xml
beatnaut_sim_ws/src/beatnaut_description/urdf/: beatnaut.sdf
beatnaut_sim_ws/src/beatnaut_gazebo/: CMakeLists.txt  package.xml
beatnaut_sim_ws/src/beatnaut_gazebo/config/: ros_gz_bridge.yaml
beatnaut_sim_ws/src/beatnaut_gazebo/launch/: beatnaut_full.launch.py  simulation.launch.py
beatnaut_sim_ws/src/beatnaut_gazebo/worlds/: beatnaut_world.sdf
