<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>asket_ec_sim2d</name>
  <version>0.1.0</version>
  <description>
    Simulateur 2D léger pour le bateau Asket EC.
    Python pur, sans Gazebo — idéal pour WSL2 / machines sans GPU.
    Publie pose, trajectoire, odométrie et position GPS simulée.
  </description>
  <maintainer email="asket_ec@engineering.club">Asket EC Engineering Club</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
