[metadata]
name = asket_ec_sim2d
version = 0.0.1

[options]
packages = asket_ec_sim2d
install_requires = setuptools

[options.data_files]
share/ament_index/resource_index/packages =
    resource/asket_ec_sim2d
share/asket_ec_sim2d =
    package.xml
share/asket_ec_sim2d/launch =
    launch/sim2d.launch.py
    launch/njord_sim.launch.py
share/asket_ec_sim2d/config =
    config/sim2d.rviz
    config/waypoints.yaml
    config/buoys.yaml

[options.entry_points]
console_scripts =
    simulator_node = asket_ec_sim2d.simulator_node:main
    waypoint_navigator_node = asket_ec_sim2d.waypoint_navigator_node:main
    buoy_simulator_node = asket_ec_sim2d.buoy_simulator_node:main
    keyboard_teleop_node = asket_ec_sim2d.keyboard_teleop_node:main
    sim_bridge_node = asket_ec_sim2d.sim_bridge_node:main
    nav_to_pid = asket_ec_sim2d.nav_to_pid:main
    pid_controller = asket_ec_sim2d.pid_controller:main
